--- a/NG/NG-Learn/NG-world/src/app/app.component.html
+++ b/NG/NG-Learn/NG-world/src/app/app.component.html
@@ -17,6 +17,8 @@
         <app-display-count [value]="totalCount"></app-display-count>
     -->
 
-    <app-customer-form></app-customer-form>
+    <!--<app-customer-form></app-customer-form>-->
+
+    <app-employee-form></app-employee-form>
 
 </div>
